add support for socket-based sync from conduit to running java app since conduit CANNOT connect to an HSQLDB DB directly