@@ -56,13 +56,16 @@ class RemoteBeanDB implements BeanDB {
 	public final synchronized void addObj(KeyedBean bean, boolean crypt)
 			throws DBException, Exception {
 		checkReadOnly();
-		call("addObj", new IRemoteProxy.ComposedObject(bean, new Boolean(crypt)));
+		call(
+				"addObj",
+				new IRemoteProxy.ComposedObject(bean, new Boolean(crypt) /* Boolean.valueOf(crypt) */));
 	}
 
 	public final synchronized void updateObj(KeyedBean bean, boolean crypt)
 			throws DBException, Exception {
 		checkReadOnly();
-		call("updateObj", new IRemoteProxy.ComposedObject(bean, new Boolean(crypt)));
+		call("updateObj", new IRemoteProxy.ComposedObject(bean, new Boolean(
+				crypt) /* Boolean.valueOf(crypt) */));
 	}
 
 	public final synchronized void delete(int key) throws Exception {
@@ -92,13 +95,12 @@ class RemoteBeanDB implements BeanDB {
 		return ((Integer) call("nextkey", null)).intValue();
 	}
 
-    public final synchronized boolean isDirty() throws DBException, Exception
-    {
+	public final synchronized boolean isDirty() throws DBException, Exception {
 		boolean result = ((Boolean) call("isDirty", null)).booleanValue();
-//		System.out.println("isDirty = "+result);
+		// System.out.println("isDirty = "+result);
 		return result;
-    }
-    
+	}
+
 	public final synchronized void sync() throws DBException {
 	}
 
@@ -108,13 +110,13 @@ class RemoteBeanDB implements BeanDB {
 				args, user);
 		XTree xmlParms = XmlObjectHelper.toXml(parms);
 		String xmlstr = xmlParms.toString();
-		//System.out.println(xmlstr);
+		// System.out.println(xmlstr);
 		RemoteProxyHome home = RemoteProxyHome.getInstance();
 		String result = home.getProxy(impl).execute(xmlstr,
 				home.getProxyProvider());
-		//System.out.println(result);
+		//System.out.println("OutTrace - " + result);
+		//System.err.println("ErrTrace - " + result);
 		XTree xmlResult = XTree.readFromBuffer(result);
-
 		Object retval = XmlObjectHelper.fromXml(xmlResult);
 		if (retval instanceof Exception)
 			throw (Exception) retval;
@@ -140,8 +142,12 @@ class RemoteBeanDB implements BeanDB {
 
 	// private //
 	private Class cls;
+
 	private String clsstr;
+
 	private String impl;
+
 	private boolean readonly;
+
 	private String user;
 }
